syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo (TodoRequest) returns (TodoItem);
    rpc readTodos(voidParam) returns (TodoItems);
    rpc readTodosStream(voidParam) returns (stream TodoItem);
}

message voidParam {

}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoRequest {
    string text = 2;
}

message TodoItems {
    repeated TodoItem todoItems = 1;
}
